--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     },
     "homepage": "https://github.com/jhuang314/jessehuang",
     "dependencies": {
-	"logfmt": "^0.21.0",
-	"express": "^4.0.0-rc2",
-	"nodealytics": ""
+	"logfmt": "*",
+	"express": "*",
+	"nodealytics": "*",
+	"jade": "*"
     }
 }
